.provarCaches/00D6C0000000xA6UAI/objects/CCS_Batch_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Class</label>
        <referenceTo>CCS_Batch_Class__c</referenceTo>
        <relationshipLabel>Batch Participants</relationshipLabel>
        <relationshipName>Batch_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evaluation_Notes__c</fullName>
        <label>Evaluation Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mastery_Status__c</fullName>
        <label>Mastery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Id_Batch_Participant__c</fullName>
        <label>Offering Id Batch Participant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Batch Participant</label>
    <nameField>
        <displayFormat>BP-{0000000000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>